# sentri

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile
src/sentri/: __init__.py  __main__.py
src/sentri/cli/: __init__.py  app.py  groups.py  helpers.py  users.py
src/sentri/config/: __init__.py  settings.py
src/sentri/core/: __init__.py  models.py  ports.py
src/sentri/core/services/: __init__.py  monitor_service.py
src/sentri/infrastructure/database/: __init__.py  repository.py
src/sentri/infrastructure/notifications/: __init__.py  telegram_forwarder.py
src/sentri/infrastructure/telegram/: __init__.py  client.py  events.py  formatter.py
src/sentri/utils/: __init__.py  logging.py
src/sentri/web/: __init__.py  app.py  auth_flow.py  dependencies.py  schemas.py  watch_manager.py
src/sentri/web/routes/: api.py  pages.py
src/sentri/web/static/css/: app.css
src/sentri/web/static/js/: app.js
src/sentri/web/templates/: base.html  dashboard.html
src/tg_admin_watch/: __init__.py  __main__.py
src/tg_admin_watch/cli/: __init__.py  app.py  groups.py  helpers.py  users.py
src/tg_admin_watch/config/: __init__.py  settings.py
src/tg_admin_watch/core/: __init__.py  models.py  ports.py
src/tg_admin_watch/core/services/: __init__.py  monitor_service.py
src/tg_admin_watch/infrastructure/database/: __init__.py  repository.py  schema.py
src/tg_admin_watch/infrastructure/notifications/: __init__.py  base.py  telegram_forwarder.py
src/tg_admin_watch/infrastructure/telegram/: __init__.py  client.py  events.py  formatter.py
src/tg_admin_watch/utils/: __init__.py  logging.py  rate_limit.py
tests/: __init__.py  conftest.py  test_config.py  test_database.py  test_formatter.py  test_ports.py  test_web.py
