[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tg-admin-watch"
version = "0.1.0"
description = "Monitor Telegram groups and forward messages from selected users to a destination chat"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "TG Admin Watch Contributors" }]
keywords = ["telegram", "telethon", "monitoring", "forwarding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "telethon>=1.36.0",
    "typer>=0.12.0,<1.0.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0,<1.0.0",
    "mypy>=1.8.0,<2.0.0",
]

[project.scripts]
tg-admin-watch = "tg_admin_watch.cli.app:app"

[project.urls]
Homepage = "https://github.com/your-org/tg-admin-watch"
Repository = "https://github.com/your-org/tg-admin-watch"
Issues = "https://github.com/your-org/tg-admin-watch/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/tg_admin_watch"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["tg_admin_watch"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]