[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sentri"
version = "0.1.0"
description = "Monitor Telegram groups and forward messages from selected users to a destination chat"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Sentri Contributors" }]
keywords = ["telegram", "telethon", "monitoring", "forwarding"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "telethon>=1.36.0",
    "typer>=0.12.0,<1.0.0",
    "rich>=13.7.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.27.0",
    "ruff>=0.3.0,<1.0.0",
    "mypy>=1.8.0,<2.0.0",
]
web = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
]

[project.scripts]
sentri = "sentri.cli.app:app"

[project.urls]
Homepage = "https://github.com/Fraeiy/sentri"
Repository = "https://github.com/Fraeiy/sentri"
Issues = "https://github.com/Fraeiy/sentri/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/sentri"]

[tool.hatch.build.targets.wheel.force-include]
"src/sentri/web/templates" = "sentri/web/templates"
"src/sentri/web/static" = "sentri/web/static"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"src/sentri/web/**/*.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.coverage.run]
source = ["sentri"]
branch = true

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "if TYPE_CHECKING:"]